# palautusrepositorio

./: README.md
viikko1/nhl-statistics-1/: .coverage
viikko1/nhl-statistics-1/src/: index.py  statistics_service.py
viikko1/nhl-statistics-1/src/tests/: StatisticService_test.py
viikko2/poetry-web/: pyproject.toml
viikko2/poetry-web/project-reader/src/: project_reader.py
viikko3/hello-robot/: log.html  output.xml  report.html
viikko3/login-robot/: log.html  output.xml  report.html
viikko3/login-robot/src/services/: user_service.py
viikko3/login-robot/src/tests/: login.robot  register.robot  resource.robot
viikko3/web-login/src/services/: user_service.py
viikko3/web-login/src/tests/: login.robot  resource.robot
viikko4/: retro.md
viikko4/maksukortti-mock/src/: kassapaate.py
viikko4/maksukortti-mock/src/tests/: kassapaate_test.py
viikko4/verkkokauppa/src/tests/: kauppa_test.py
viikko5/tennis/src/: index.py  tennis_game.py
viikko6/: PULL.md
viikko6/src/: index.py  matchers.py  query_builder.py
viikko7/: MERGE.md
viikko7/kivi-paperi-sakset/src/: KiviPaperiSakset.py  index.py  kps_parempi_tekoaly.py  kps_pelaaja_vs_pelaaja.py  kps_tekoaly.py
