[tool.poetry]
name = "poetry-web"
version = "0.1.0"
description = ""
authors = ["Yahia <yahimoh@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.0"
tomli = "^2.0.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
